[gd_scene load_steps=11 format=3 uid="uid://bawm3qvkn8783"]

[ext_resource type="Script" uid="uid://1w1bswjiht2h" path="res://Elements/star.gd" id="1_pcduc"]
[ext_resource type="Shader" uid="uid://dj60af0wvwp7w" path="res://Shaders/StarHaze.gdshader" id="2_a3dkv"]
[ext_resource type="Texture2D" uid="uid://c32wj42rde1kh" path="res://Assets/img/Stars/sprite_1.png" id="2_saxxo"]
[ext_resource type="Texture2D" uid="uid://8wclfm2h7740" path="res://Assets/img/Stars/sprite_2.png" id="3_0rsms"]
[ext_resource type="Texture2D" uid="uid://b471vapp7bdv2" path="res://Assets/img/Stars/sprite_3.png" id="4_a3dkv"]
[ext_resource type="Texture2D" uid="uid://boenug8daqk3w" path="res://Assets/img/Stars/sprite_4.png" id="5_8ii3x"]
[ext_resource type="PackedScene" uid="uid://cwi20kh8j71f2" path="res://UI/edit_tools.tscn" id="6_0rsms"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ii3x"]
shader = ExtResource("2_a3dkv")
shader_parameter/speed = 2.0
shader_parameter/intensity = 0.008
shader_parameter/haze_strength = 1.0
shader_parameter/tint_color = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_lfjbe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_saxxo")
}, {
"duration": 1.0,
"texture": ExtResource("3_0rsms")
}, {
"duration": 1.0,
"texture": ExtResource("4_a3dkv")
}, {
"duration": 1.0,
"texture": ExtResource("5_8ii3x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_saxxo"]
resource_local_to_scene = true
radius = 16.0

[node name="Star" type="Node2D"]
script = ExtResource("1_pcduc")
mass = 1000000

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_8ii3x")
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_lfjbe")
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_saxxo")
disabled = true

[node name="EditTools" parent="." instance=ExtResource("6_0rsms")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="pressed_delete" from="EditTools" to="." method="_on_edit_tools_pressed_delete"]
[connection signal="pressed_move" from="EditTools" to="." method="_on_edit_tools_pressed_move"]
